@@ -6,8 +6,10 @@
 //                                   //
 ///////////////////////////////////////
 
+// Micro-hack to give nice source listings
+$included[1] = true;
+
 // Include the general layout functions
-$included = true;
 include('layout.php');
 
 // Ensure we always have a page, and style
@@ -42,12 +44,33 @@ include('files.php');
 if ($titles[$page]) $title = $titles[$page];
 $okay = (file_exists('content/'.$page) && !is_dir('content/'.$page));
 if (!$okay) $title = 'page not found';
+if ($source) $title = 'source';
 
 // Output the header
-page_header($title, $page, $pagestyle);
+page_header($title, $page, $style);
 
 // Include the data
-if ($okay)
+if ($source)
+{
+	echo '<p>The various variables used on the nangband site are:</p>';
+	echo '<ul>';
+	echo '<li><b>$page</b> - this specifies the page to be included from content/.</li>';
+	echo '<li><b>$cstyle</b> - this is the style, as set by a cookie.</li>';
+	echo '<li><b>$pages</b> - this is a number-keyed array, which contains a list of the content pages\' filenames.</li>';
+	echo '<li><b>$titles</b> - this is an array keyed on the names of the content pages, which provides the &quot;full names&quot; of each page.</li>';
+	echo '</ul>';
+	echo '<p>The source files used in the nangband site are <a href="?source=layout">layout.php</a>,';
+	echo ' <a href="?source=files">files.php</a>, and <a href="?source=true">index.php</a>.  Click ';
+	echo 'on one of the files listed above to see it\'s source code.</p>';
+	echo '<p>Here is the source:</p>';
+
+	if ($source == 'layout') $source = 'layout.php';
+	else if ($source == 'files') $source = 'files.php';
+	else $source = 'index.php';
+
+	show_source($source);
+}
+else if ($okay)
 {
 	include('content/'.$page);
 }
