@@ -7,11 +7,17 @@
 
 body
 {
-	background: #ffffff;
-	color: #000000;
-	font-family:  Arial, sans-serif;
-	font-size: 14px;
-	text-align: justify;
+	color: #333333;
+	background-color: #ffffff;
+	font-family: sans-serif;
+	font-size: 12px;
+}
+
+td
+{
+	color: #333333;
+	font-family: sans-serif;
+	font-size: 12px;
 }
 
 form
@@ -22,6 +28,7 @@ form
 
 input.box
 {
+	color: #000000;
 	background: #ffffee;
 	padding-bottom: 1px;
 	padding-top: 1px;
@@ -38,20 +45,16 @@ input.button
 	color: #000000;
 }
 
-em
+td.border
 {
-	background-color: #DDDDDD;
-}
-
-h1
-{
-  font-size: 16pt;
-  text-align: center;
+	border: 1px solid;
+	padding: 3px;
 }
 
 a
 {
 	color: #3399FF;
+	background-color: inherit;
 	font-weight: normal;
 	text-decoration: none;
 }
@@ -63,7 +66,8 @@ a:hover
 
 hr
 {
-  color: #005500;
-  height: 1pt;
-  text-align: center;
+	color: #005500;
+	background-color: inherit;
+	height: 1pt;
+	text-align: center;
 }
